--- a/src/css/App.css
+++ b/src/css/App.css
@@ -8,8 +8,8 @@
 
 .app-container {
   background-color: #F5CE51;
-  margin-left: 200px;
-  margin-right: 200px;
+  margin-left: 60px;
+  margin-right: 60px;
   display: grid;
   grid-template-columns: 1fr 2fr 300px;
   grid-template-rows: 1fr auto;
@@ -24,7 +24,7 @@
   grid-column: 1/4;
   text-align: center;
   color: yellow;
-  padding: 40px;
+  padding: 30px;
   font-size: 40px;
   text-shadow: 3px 3px #000000;
   font-family: 'Fredoka One', cursive;
@@ -101,7 +101,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  height: 100vh;
+  height: 110vh;
   width: 100%;
   z-index: 1;
   background-color: rgba(158, 158, 158, 0.7);
@@ -137,6 +137,44 @@
   font-size: 25px;
   padding-left: 20px;
   color: white;
+  display: grid;
+  grid-template-columns: 70% auto;
+}
+
+#modal-calculator {
+  background-color: white;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 15px;
+  padding-left: 15px;
+  color: rgb(73, 69, 69);
+  border-radius: 5px;
+  justify-self: left;
+  margin: 5px;
+  box-shadow: 0px 5px #094483;
+  border-style: hidden;
+  font-family: 'Roboto Slab', serif;
+  font-size: 25px;
+}
+
+#modal-calculator-clear {
+  background-color: pink;
+  color: white;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 15px;
+  padding-left: 15px;
+  border-radius: 5px;
+  justify-self: left;
+  margin: 5px;
+  box-shadow: 0px 5px rgb(252, 139, 158);
+  border-style: hidden;
+  font-family: 'Roboto Slab', serif;
+  font-size: 25px;
+}
+
+#header {
+  margin-bottom: 20px;
 }
 
 .modal-body>h3 {
@@ -171,6 +209,7 @@
 
 #confirm-button {
   margin-right: 150px;
+  margin-top: 30px;
 }
 
 .hide {
